Update pricing: correct rates per Ira

--- a/draft/kp-vibecoding.html
+++ b/draft/kp-vibecoding.html
@@ -506,49 +506,51 @@
     <div class="pricing-grid fade-in">
 
       <div class="plan">
-        <p class="plan-tag">Старт</p>
+        <p class="plan-tag">Лендинг</p>
         <div class="plan-price">50 000 ₽</div>
-        <p class="plan-price-note">Лендинг без AI · срок 3–5 дней</p>
+        <p class="plan-price-note">Контент готов · срок 3–5 дней</p>
         <div class="plan-divider"></div>
         <ul class="plan-features">
           <li><strong>Одностраничный лендинг</strong></li>
           <li>3D-карусель, анимации, кастомный курсор</li>
-          <li>Видео, тексты, фото — ваш контент</li>
+          <li>Ваши тексты, фото, видео</li>
           <li>Адаптив (мобильный + десктоп)</li>
           <li>Работает без интернета</li>
           <li>1 раунд правок</li>
         </ul>
+        <p style="font-size:12px; color:#666; margin-top:16px;">Нужна генерация картинок — <strong style="color:#aaa">80 000 ₽</strong></p>
         <a href="https://t.me/ira_and_ai" target="_blank" class="plan-cta">Обсудить</a>
       </div>
 
       <div class="plan featured">
         <p class="plan-tag hot">Рекомендую</p>
         <div class="plan-price">80 000 ₽</div>
-        <p class="plan-price-note">Лендинг + AI-ассистент · срок 5–7 дней</p>
+        <p class="plan-price-note">Лендинг + AI-ассистент · база знаний готова</p>
         <div class="plan-divider"></div>
         <ul class="plan-features">
-          <li><strong>Всё из тарифа Старт</strong></li>
-          <li>AI-агент на сайте: отвечает на вопросы о продукте 24/7</li>
+          <li><strong>Лендинг с анимациями</strong></li>
+          <li>AI-агент на сайте: отвечает на вопросы 24/7</li>
           <li>Обучен на вашей базе знаний</li>
           <li>Собирает контакты заинтересованных</li>
           <li>2 раунда правок</li>
           <li>Поддержка 2 недели после запуска</li>
         </ul>
+        <p style="font-size:12px; color:#555; margin-top:16px;">Нужно создать базу знаний — <strong style="color:#333">110 000 ₽</strong></p>
         <a href="https://t.me/ira_and_ai" target="_blank" class="plan-cta">Обсудить</a>
       </div>
 
       <div class="plan">
-        <p class="plan-tag">Максимум</p>
-        <div class="plan-price">150 000 ₽</div>
-        <p class="plan-price-note">Сайт + AI + Backend · срок 4–6 недель</p>
+        <p class="plan-tag">Полная система</p>
+        <div class="plan-price">от 300 000 ₽</div>
+        <p class="plan-price-note">Сайт + AI + Backend · Ира + Денис</p>
         <div class="plan-divider"></div>
         <ul class="plan-features">
-          <li><strong>Всё из тарифа Рекомендую</strong></li>
-          <li>Многостраничный сайт (каталог, разделы, контакты)</li>
-          <li>Backend: формы заявок, CRM-интеграция, админка</li>
-          <li>Telegram-бот: сбор запросов, рекомендации по продукту</li>
+          <li><strong>Многостраничный сайт</strong></li>
+          <li>Backend: CRM, формы заявок, админка</li>
+          <li>Telegram/WhatsApp боты</li>
           <li>AI-агенты по функциям (продажи, поддержка, квалификация)</li>
           <li>Деплой + техподдержка 1 месяц</li>
+          <li>Финальная цена — после детального ТЗ</li>
         </ul>
         <a href="https://t.me/ira_and_ai" target="_blank" class="plan-cta">Обсудить</a>
       </div>
